perf: :zap: remove unused font loaders to improve font performance

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -26,7 +26,7 @@ const socialImageURL = new URL(ogImage ? ogImage : '/images/social-card.png', As
 <link rel='manifest' href='/favicon/site.webmanifest' />
 
 {/* Font preloads */}
-<Font cssVariable='--font-satoshi' preload />
+<Font cssVariable='--font-satoshi' preload={[{ subset: 'latin', style: 'normal' }]} />
 <style>
   body {
     font-family: var(--font-satoshi);
