made some customizations

--- a/packages/pure/components/basic/Footer.astro
+++ b/packages/pure/components/basic/Footer.astro
@@ -67,9 +67,9 @@ const footerLink1 = footerConf.links?.filter(({ pos }) => pos === 1) || []
               </a>
               &
               <a href='https://github.com/cworld1/astro-theme-pure' target='_blank'>
-                Pure
+                Pure theme
               </a>
-              theme powered
+               powered
             </span>
           )
         }
