--- a/packages/pure/components/pages/Copyright.astro
+++ b/packages/pure/components/pages/Copyright.astro
@@ -85,13 +85,15 @@ const shares = {
       >
         <Icon class='size-5' name='link' />
       </button>
-      <button
+      {/* 停止使用二维码生成功能
+            <button
         id='get-qrcode'
         aria-label='Get QR code'
         class='group rounded-full bg-muted p-1 text-muted-foreground transition-colors hover:text-primary sm:p-1.5'
       >
         <Icon class='size-5' name='qrcode' />
       </button>
+ */}
       {
         config.content.share.map((share) => (
           <a
@@ -106,9 +108,11 @@ const shares = {
         ))
       }
     </div>
+{ /* 停止使用二维码生成功能
     <QRCode
       class='absolute z-10 -mt-2 box-content max-h-0 max-w-44 overflow-hidden rounded-xl border bg-muted p-4 opacity-0 transition-all duration-300 ease-in-out'
     />
+*/}
   </div>
 </div>
 
@@ -123,13 +127,13 @@ const shares = {
   </a>
 </div>
 
-<style>
+<!-- <style>
   #qrcode-container.expanded {
     max-height: 11rem;
     transform: translateY(4px);
     opacity: 100;
   }
-</style>
+</style> -->
 
 <script>
   import { showToast } from '../../utils'
@@ -143,7 +147,7 @@ const shares = {
   })
 
   // QRCode
-  const getQRCode = document.getElementById('get-qrcode')
-  const qrcodeContainer = document.getElementById('qrcode-container')
-  getQRCode?.addEventListener('click', () => qrcodeContainer?.classList.toggle('expanded'))
+  // const getQRCode = document.getElementById('get-qrcode')
+  // const qrcodeContainer = document.getElementById('qrcode-container')
+  // getQRCode?.addEventListener('click', () => qrcodeContainer?.classList.toggle('expanded'))
 </script>
