--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,9 +43,10 @@ if (!images[imagePath])
       <div class='flex flex-col items-center gap-y-4'>
         <h1 class='text-3xl font-medium'>{config.author}</h1>
         <div class='flex flex-wrap justify-center gap-x-7 gap-y-3'>
-          <Label title='Somewhere'>
-            <Icon name='location' class='size-5' slot='icon' />
+          <Label title='China'>
+            <Icon name='location' class='size-5' slot='icon' color="green" />
           </Label>
+          {/* }
           <Label
             title='Source code'
             as='a'
@@ -54,6 +55,7 @@ if (!images[imagePath])
           >
             <Icon name='github' class='size-5' slot='icon' />
           </Label>
+          */ }
         </div>
       </div>
 
@@ -75,11 +77,18 @@ if (!images[imagePath])
 
     <div id='content' class='animate flex flex-col gap-y-10 md:w-4/5 lg:w-5/6'>
       <Section title='About'>
-        <p class='text-muted-foreground'>Developer / Designer</p>
+        <p class='text-muted-foreground'>Developer / Content Creator</p>
         <p class='text-muted-foreground'>
-          Lorem ipsum dolor sit amet, vidit suscipit at mei. Quem denique mea id. Usu ei regione
-          indoctum dissentiunt, cu meliore fuisset mei, vel quod voluptua ne. Ex dicat impedit mel,
-          at eum oratio possit voluptatum.
+          你好，我是涵秋（也可能以Hancheu_JC、Hancheu、HanQiu、HQ等形式出现）。<br/>
+          目前正在尝试一些内容创作和去中心化方面的项目。<br/> 
+          积极拥抱AI，坚信AI的发展会改善人类的生活面貌。<br/>
+          期待与你相遇（在现实世界或者赛博空间）。
+        </p>
+        <p class='text-muted-foreground'>
+          Hi, Here's Hancheu (also known as Hancheu_JC, HanQiu, HQ etc.) speaking.<br/>
+          I'm currently exploring content creation and decentralized projects.<br/> 
+          I embrace AI with enthusiasm and firmly believe its advancement will enhance the human condition.<br/>
+          Looking forward to meeting you — in the physical world or in cyberspace.
         </p>
         <Button title='More about me' class='w-fit self-end' href='/about' variant='ahead' />
       </Section>
@@ -98,8 +107,7 @@ if (!images[imagePath])
         )
       }
 
-      {
-        /* <Section title='Experience'>
+      { /* <Section title='Experience'>
       <Card
         heading='Lorem Ipsum'
         subheading='Sit amet consectetur'
@@ -126,14 +134,14 @@ if (!images[imagePath])
         imageClass='h-12 w-auto md:-start-16'
       />
     </Section> 
-      }*/
+      */ }
       <Section title='Education'>
         <Card
           as='a'
-          heading='Lorem ipsum'
-          subheading='Lorem ipsum dolor sit amet, vidit suscipit at mei.'
-          date='August 2021 - July 2025'
-          href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'
+          heading='Ocean University of China'
+          subheading='M.Sc. Marine Technology. Faculty of Information Science and Engineering'
+          date='August 2020 - July 2023'
+          href='https://it.ouc.edu.cn/'
         >
           {
             /* <ul class='ms-4 list-disc text-muted-foreground'>
@@ -145,6 +153,13 @@ if (!images[imagePath])
         </ul> */
           }
         </Card>
+        <Card
+          as='a'
+          heading='Ocean University of China'
+          subheading='B.Eng. Communication Engineering. Faculty of Information Science and Engineering'
+          date='August 2016 - July 2020'
+          href='https://www.ouc.edu.cn/'
+        />
       </Section>
 
       <!-- <Section title='Website List'>
