--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -29,7 +29,7 @@ const events = [
   {date:"2016.8-2020.6", content: "在中国海洋大学通信工程专业水课 B.Eng. in Communication Engineering, OUC"},
   {date:"2013.8-2016.6", content: "在沂源县第一中学坐牢 Studied at YiYuan No.1 High School"},
   {date:"2000.8-2013.6", content: "初具人形 Childhood"},
-  {date:"1997.11", content: "出生于山东省沂源县鲁村镇 Borned in Lucun Town, YiYuan County, Shandong Province"}
+  {date:"1997.11", content: "出生于山东省沂源县 Borned in YiYuan County, Shandong Province"}
 ]
 
 const stats = [
@@ -122,7 +122,7 @@ const entertainment = [
       <Image
     src={Mbti}
     alt="Mbti: INTP-A Logician"
-    loading="lazy"
+    loading="eager"
     width={300}
     height={300}
   />
@@ -203,7 +203,7 @@ const entertainment = [
     The smooth running and personalized design of this website rely on the resources and technical support provided by the following excellent projects/service providers:
   </p>
   <ul>
-    <li>Domain: <a href='#' target='_blank'>hqsay.com</a></li>
+    <li>Domain: <a href='https://hqsay.com' target='_blank'>hqsay.com</a></li>
     <li>
       Framework & Theme: <a href='https://astro.build/' target='_blank'>Astro</a> + <a
         href='https://github.com/cworld1/astro-theme-pure'
