--- a/src/components/links/FriendList.astro
+++ b/src/components/links/FriendList.astro
@@ -56,7 +56,7 @@ const getAvatarSrc = (friend: friend) =>
                   height={80}
                   width={80}
                   alt='avatar'
-                  loading='lazy'
+                  loading='eager'
                 />
                 <div class='absolute start-0 top-0 h-full w-full'>
                   <div class='flex h-full w-full items-center justify-center rounded-full bg-foreground opacity-0 transition-opacity duration-300 ease-in-out group-hover:opacity-50'>
@@ -99,7 +99,7 @@ const getAvatarSrc = (friend: friend) =>
               height={80}
               width={80}
               alt='avatar bg'
-              loading='lazy'
+              loading='eager'
               style={{
                 maskImage: 'linear-gradient(to left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%)',
                 msMaskImage:
