--- a/src/components/projects/Sponsorship.astro
+++ b/src/components/projects/Sponsorship.astro
@@ -29,7 +29,7 @@ const { class: className, methods, ...props } = Astro.props
           class='sponsorship-card-img mx-auto my-0 max-w-60 blur-sm transition-opacity'
           src={item.image}
           alt={item.name}
-          loading='lazy'
+          loading='eager'
         />
       </div>
     ))
