--- a/src/components/waline/Comment.astro
+++ b/src/components/waline/Comment.astro
@@ -1,22 +1,17 @@
 ---
 import config from '@/site-config'
-
 import '@waline/client/style'
-
 import { cn } from 'astro-pure/utils'
 
 const { class: className } = Astro.props
+const walineConfig = config.integ.waline
 ---
 
-{
-  config.integ.waline.enable && (
-    <comment-component>
-      <div id='waline' class={cn('not-prose', className)}>
-        Comment seems to stuck. Try to refresh?✨
-      </div>
-    </comment-component>
-  )
-}
+{walineConfig.enable && (
+  <div id="waline" class={cn('not-prose', className)}>
+    Loading comments... ✨
+  </div>
+)}
 
 <script>
   import { init as walineInit } from '@waline/client'
@@ -25,34 +20,19 @@ const { class: className } = Astro.props
 
   const walineConfig = config.integ.waline
 
-  class Comment extends HTMLElement {
-    constructor() {
-      super()
-    }
+  if (walineConfig?.enable) {
+    const emoji = walineConfig.emoji?.map(
+      (preset) => `${config.npmCDN}/@waline/emojis@1.2.0/${preset}` as WalineEmojiPresets
+    )
 
-    connectedCallback() {
-      // Prevent Vue log errors
-      ;(globalThis as unknown as { __VUE_OPTIONS_API__: boolean }).__VUE_OPTIONS_API__ = true
-      ;(globalThis as unknown as { __VUE_PROD_DEVTOOLS__: boolean }).__VUE_PROD_DEVTOOLS__ = false
-      ;(
-        globalThis as unknown as { __VUE_PROD_HYDRATION_MISMATCH_DETAILS__: boolean }
-      ).__VUE_PROD_HYDRATION_MISMATCH_DETAILS__ = false
-
-      const emoji = walineConfig.emoji?.map(
-        (preset) => `${config.npmCDN}/@waline/emojis@1.2.0/${preset}` as WalineEmojiPresets
-      )
-
-      walineInit({
-        el: '#waline',
-        serverURL: walineConfig.server || '',
-        emoji,
-        reaction: ['/icons/heart-item.svg'],
-        ...walineConfig.additionalConfigs
-      })
-    }
+    walineInit({
+      el: '#waline',
+      serverURL: walineConfig.server || '',
+      emoji,
+      reaction: ['/icons/heart-item.svg'],
+      ...walineConfig.additionalConfigs
+    })
   }
-
-  if (walineConfig.enable) customElements.define('comment-component', Comment)
 </script>
 
 <style>
