--- a/packages/pure/components/basic/Footer.astro
+++ b/packages/pure/components/basic/Footer.astro
@@ -25,7 +25,6 @@ const footerLink1 = footerConf.links?.filter(({ pos }) => pos === 1) || []
             <div>
               {footerLink1.map(({ title, link, style }, index) => (
                 <>
-                  <!- prettier-ignore -->
                   <a href={link} target='_blank' class={style}>{title}</a>
                   {index < footerLink1.length - 1 && <span class='mx-1'>•</span>}
                 </>
@@ -86,7 +85,7 @@ const footerLink1 = footerConf.links?.filter(({ pos }) => pos === 1) || []
 <style>
   footer a {
     color: hsl(var(--foreground) / var(--un-text-opacity, 1));
-    text-decoration: underline;
+    text-decoration: none;
     font-weight: 500;
   }
 </style>
