--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -216,5 +216,7 @@ const entertainment = [
     <li>Comment system: <a href='https://waline.js.org' target='_blank'>Waline</a> + 
       <a href='https://vercel.com/' target='_blank'>Vercel</a>
     </li>
+        <li>AI Assistant: <a href='https://www.qianwen.com/' target='_blank'>Qwen</a>
+    </li>
   </ul>
 </PageLayout>
